# uib_inf100_graphics

./: .gitignore  README.md  pyproject.toml
docs/: event_app.md  helpers.md  simple.md
examples/helpers/: image_in_box_simple.py  text_in_box_demo_app.py  text_in_box_simple.py
examples/simple_animations/: simple_09_animation_wink.py  simple_10_animation_ball.py
examples/simple_stills/: 01_rectangles.py  02_ovals.py  03_lines.py  04_polygons.py  05_text.py  06_arc.py  07_image.py
src/uib_inf100_graphics/: __init__.py  uib_inf100_graphics.py  version.py
src/uib_inf100_graphics/event_app/: __init__.py  types.py  uib_inf100_graphics.py
src/uib_inf100_graphics/helpers/: __init__.py  image.py  logger.py  text.py
src/uib_inf100_graphics/simple/: Configuration.py  RecordingCanvas.py  SimplifiedFrame.py  __init__.py  globals.py
